# resumeX

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  prompts.py  pyproject.toml  requirements.txt  resume.py  test_resume.py
.github/workflows/: ci.yml
src/resumex/: app.py
tests/: test_resume.py
